fixed menu collapse  Fixed other mobile responsive elements in action menu

--- a/static/css/content-landing.css
+++ b/static/css/content-landing.css
@@ -441,7 +441,7 @@ text-tweet-block{
         font-size: 14pt;
     }
     .letter-count{
-        top:65px;
+        top: 78px;
         left: 380px;
         font-size: 14px;
     }
